<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.trashub.ui.home.HomeFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_jenisFragment"
            app:destination="@+id/jenisFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.android.trashub.ui.dashboard.DashboardFragment"
        android:label="@string/title_kamera"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.android.trashub.ui.notifications.NotificationsFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/jenisFragment"
        android:name="com.android.trashub.ui.home.JenisFragment"
        android:label="@string/jenis_jenis_sampah"
        tools:layout="@layout/fragment_jenis" />
</navigation>