<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGaleri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGaleri"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/galeri"
        style="@style/TextContent.TitleMedium"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/medium_blue"
        app:layout_constraintBottom_toTopOf="@+id/btnSimpan"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnKamera"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/kamera"
        style="@style/TextContent.TitleMedium"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/medium_blue"
        app:layout_constraintBottom_toTopOf="@+id/btnSimpan"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSimpan"
        android:layout_width="370dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:text="@string/simpan"
        style="@style/TextContent.TitleMedium"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/medium_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>